--- a/CarRentalManagementSystem/Views/Shared/_AdminLayout.cshtml
+++ b/CarRentalManagementSystem/Views/Shared/_AdminLayout.cshtml
@@ -32,7 +32,7 @@
                             <i class="fas fa-user"></i> @(ViewBag.UserRole ?? "Admin")
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#"><i class="fas fa-user-edit"></i> Profile</a></li>
+                            <li><a class="dropdown-item" asp-controller="Admin" asp-action="Profile"><i class="fas fa-user-edit"></i> Profile</a></li>
                             <li><hr class="dropdown-divider"></li>
                             <li><a class="dropdown-item" href="@Url.Action("Logout", "Account")"><i class="fas fa-sign-out-alt"></i> Logout</a></li>
                         </ul>
