--- a/CarRentalManagementSystem/Views/Admin/Cars.cshtml
+++ b/CarRentalManagementSystem/Views/Admin/Cars.cshtml
@@ -19,7 +19,7 @@
 <div class="card">
     <div class="card-body">
         <div class="table-responsive">
-            <table class="table table-striped table-hover" id="carsTable">
+            <table class="table table-striped table-hover align-middle admin-cars-table" id="carsTable">
                 <thead class="table-dark">
                     <tr>
                         <th>Image</th>
